<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="12dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:contentPadding="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        android:padding="10dp">

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gray_gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAvatar"
            tools:text="Egor Taranov" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/status_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tvStatus"
            app:layout_constraintStart_toStartOf="@+id/tvStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvStatus"
            style="style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/tvGender"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_title"
            tools:text="Живой" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/gender_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gender_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tvGender"
            app:layout_constraintStart_toStartOf="@+id/tvGender"
            app:layout_constraintTop_toTopOf="@+id/status_title" />

        <TextView
            android:id="@+id/tvSpecies"
            style="style/DefaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvStatus"
            app:layout_constraintTop_toBottomOf="@+id/species_title"
            tools:text="Человек" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/species_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/species_title"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tvSpecies"
            app:layout_constraintStart_toStartOf="@+id/tvSpecies"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvStatus"
            app:layout_constraintTop_toTopOf="@+id/tvStatus"
            tools:text="Мужской" />

    </androidx.constraintlayout.widget.ConstraintLayout></com.google.android.material.card.MaterialCardView>